# doc_auto

./: main.py  pyproject.toml
.github/workflows/: docs.yml
app/modules/: modules.py  my_maths.py
docs/public/: index.html  objects.inv  searchindex.js
docs/public/.doctrees/: index.doctree
docs/public/_static/: documentation_options.js
docs/source/: app.modules.rst  app.rst  conf.py  index.rst
public/: .buildinfo  app.html  app.modules.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
public/.doctrees/: app.doctree  app.modules.doctree  environment.pickle  index.doctree  modules.doctree
public/_modules/: index.html
public/_modules/app/modules/: modules.html  my_maths.html
public/_sources/: index.rst.txt
source/: conf.py
