[project]
name = "doc-pro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.8",
    "myst-parser>=5.0.0",
    "numpy>=2.4.2",
    "sphinx>=9.0.4",
    "sphinx-rtd-theme>=3.1.0",
]

[dependency-groups]
dev = [
    "sphinx-rtd-theme>=3.0.0rc1",
]
